RESOLVED FIXED60481
transform fixes
https://bugs.webkit.org/show_bug.cgi?id=60481
Summary transform fixes
Robin Dunn
Reported 2011-05-09 11:02:40 PDT
Created attachment 92806 [details] transform fixes patch Rect transform for more controls, a couple focus fixes, and 2.9.2 support.
Attachments
transform fixes patch (5.64 KB, patch)
2011-05-09 11:02 PDT, Robin Dunn
kevino: review+
kevino: commit-queue-
Kevin Ollivier
Comment 1 2011-05-09 11:21:02 PDT
Landed in r86070, thanks!
Note You need to log in before you can comment on or make changes to this bug.