Reviewed by Kevin Ollivier.

[wx] Make sure other controls adjust the rect to handle transforms, and turn off the
adjustment in 2.9.2+ where it is handled internally by wx.

Also add a couple drawing and focus handling fixes for text fields and menulist controls.

https://bugs.webkit.org/show_bug.cgi?id=60481



Canonical link: https://commits.webkit.org/75743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86070 268f45cc-cd09-0410-ab3c-d52691b4dbfc